src/test/resources/de/feu/ps/bridges/serialization/syntax_errors/no_number_bridges.bgs
FIELD
11 x 8 | 2

ISLANDS
( 0, 0 | a )
( 0, 5 | 1 )

BRIDGES
( 0, 1 | false )
